remove erroneus kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:RWof7x9p3aU92tWvpyYuH8Gh03fQ6BBrs4HwzH0gUK/K/J9xkrumpY9IrI2uYcqOdgIgX3iFcZaiKMK7dxSemL8=,iv:etut1KHjR+nyZsCvxH+l+JJInB0WRFuxm5yk+/LQ7EA=,tag:1Qpo+8jbQbzLAA5kxKxTSg==,type:comment]
-#ENC[AES256_GCM,data:j5hErGtggm8QSQJeYo7TCuIszFF3M9QE1NTn79U4aaTAv1JQPfzxjDyTJ9I=,iv:MAT95qg+nZTsMe3wI8/zb+M8KzXDWoID3vonXAbLwVE=,tag:cnUfZ6ocfVnlezqZt2mN1g==,type:comment]
-VIP: ENC[AES256_GCM,data:8s2tCfa4dJrnlf2M6Q==,iv:Wkkk70LSXTUBHq845jUOSzXt5JEQz71r1MUtLa/Tvjs=,tag:Qt7y3z1xEiRgagQQ+ZI/ow==,type:str]
-#ENC[AES256_GCM,data:S6G1aoT+7Yhj8O15+PGFW71SHeorbPxFkIr3,iv:IkUGlALpd7BZ6jCl4x1Nmh0I31dOtE4s4s1+WMBVzcI=,tag:zkpLyDmP+b+RqmCBZzClKQ==,type:comment]
-#ENC[AES256_GCM,data:NRF/NcnI2pSDB8MpNaXW60HmvNC/vmke71NcLSpwGoDN+S8Yi/3MQ/Hi1hocmIJPTenFr5rKxhgHtpnR+QLbWo+CoUy5inQNhCAoWiFA0crGN5w7wzEOdq4=,iv:Yb10HdsBL4gdnXGeC1Whx3z3gDSs0xT9E63ilWBtG3s=,tag:Lia3iRO4i1uElpzK8IXg1A==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:UXHl1nt7ZRDS0jYF3sk=,iv:cwcS3xTceqf3RB932SOafHuqAreXP6lBw9EBJbEHcz4=,tag:GoTtVnlHyJDUG0yqdQSmug==,type:str]
-#ENC[AES256_GCM,data:gCqUezpQ4sWLmD1OzqaJ6BI+NHKqNafMOWZZgW0yCfWajw==,iv:z27NwgET3qDsid9cp01YNcTdHRHEQdiY0ZxttkOvDLo=,tag:Eh3YSTujD0k2HLvu35Tuhg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:ieFpvoB/uAZ6ZV/h7A==,iv:P9WdqStG+ykfVN8fOG6Yjs7mK3utwR/6LJ9wCcEt+Rc=,tag:WDtF0N9uNy/emGlQlXl4sQ==,type:str]
-#ENC[AES256_GCM,data:ee7YT3skwYD2uNf7K5wfFUVugR2fuibkH/jX8yaEb+yaloXTiYXIVXceDkplkvk=,iv:Re3usLtvqybbQk5ZculRJGDQ9P4PQ2ah3oXlRCLeV5Y=,tag:k0VP7mYRLh7v4ZCFdBCGyg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:DGxHO9oeght1eU+tBj37aBxUDdlQCGuDg1+oeeva2g==,iv:kQcyvJ2cbdIaqJKKtEbLqVutGLxfkHqqF4j3j2+50DE=,tag:VvNcs/Qb1/+N9pyADHjx2Q==,type:str]
-#ENC[AES256_GCM,data:UGIYlv4SvHtbyRgx4QejBA8VG43/3gwOMA34le7mo6lujvpVMXVLWO3RzUvOV1tv/4jbHlugzgZr59Xukc+ioYgnsfqj0aFdLtbZdPFX2QBNmQ==,iv:YJJokEvL4GQs01E7iuAt/5WqKOwiOr/Ms/iEO4EHkrw=,tag:j0IkE8oGLVaFhWCMBOYivw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:kInksiKe39h7RKyxJBJs,iv:PITZ4ILg5HEnxtpKB45I4YX6UfRm6dIqvnYWALMhD1k=,tag:YpdUO62RXDPzA7xbJ97gMw==,type:str]
-#ENC[AES256_GCM,data:BbqUk0fJ+xrYDKKRcPseQSCwLWtONnrlXyr41GRqR5Ze,iv:9X9jDMiMdG+q9Xicqf5QEgoKbvRQV9Svib3h1sas4pI=,tag:/G7ppr1XaJs8p7PPf4pqVA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:82CFyCqH8OcSNM7ajzBX,iv:irze6e9y4VpYmymByPiz659UZGADfvTpgN+GPNe081Q=,tag:JoIyI+nW6RDZ9D14p379yQ==,type:str]
-#ENC[AES256_GCM,data:VlOlnzAKqUV28cODzzOmRUML300RltqZkF/7T0osckzJPAMe4ZKucfz3kD1WZTAA9FSla9JqO1QbY/lXttPaXfMnysy6iXJp4on7ajrxq0U=,iv:syUslmIzVwE3sNVbeG1QgNuciop2c/dfw2zKTTkPqQY=,tag:xn0JM0USVZQoI2h2gMwJ+g==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:86Vh8SOMiZMeVLgpDaBf,iv:cUguzBPxCcduOriSh3cwcoubv0wyM78zHr5vT4NJlRU=,tag:tseiwlNuACMoUHFQl3xUbA==,type:str]
-#ENC[AES256_GCM,data:WQbdYUE0peKQAmCvQaab5jb/S7Ha98/avt2tI9L/Qt63mRQJTUzY8U/3RU11dEnpfDn5GRNRw5PB7EVsD5V8fe/0VzqrnHOL1IC3XKsM6FbTDfdODnRs,iv:uI1hfOHnNaWrFHocvENqAaCMKKTpNQeLVEGWHvM8vk8=,tag:NxXFZrbkSxjFFWJ8BFuaeA==,type:comment]
-#ENC[AES256_GCM,data:vXPqWN0EUfXe4Iqd74JE5T9j4nBw6w5SdQwyI87s4E2G+FRNcAXLLPVf863nqPMwiJNv/IHVN1uk8SKhKFLBMkXg7+MCOUBrfFlfSPgO0mYwjiErMhfPOf9Wae4Skq9R4P7JVO4nyEtaGLyrFH9cG6om//rHutie82V/tw==,iv:AigQxZ+Sno/H3OfBYtCXBgXMoruzqTUICmnP9tstfA0=,tag:k5EOMxYHgj+ZnnIpJ32IPg==,type:comment]
-#ENC[AES256_GCM,data:lrlQVHWidl40gl/ANxfhNCQobnZLoeXCW+qSeszu8Q4knoSzHRv7YKQbm6tI7dPbx067dZoSNayyaCO1xYWDYn/8yNjaw0mjFPBbpHHl1Hw=,iv:511RV+PJCYvdXUB1FfPUririA82b8ChmAgjN5fwkPdI=,tag:6C0ZgTeEk0Kzz1vVMN8Hwg==,type:comment]
-#ENC[AES256_GCM,data:XrZKWx8gK33c0OZ9G6h57PLWlywU7fvVTPJ+ja1tOhEnBRYhNnH0nwdKcndBNerFCn/zaaJI,iv:1Sk+gyrwZMbZIQm4QnkIfZM5tT9tLZDFUPTJHbomXNg=,tag:rC2wlatZba00/ZIIXWW37A==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:Le5qsNAYc7FIIsTi,iv:d5Ypd+VRkR7O9cWjYhjVX1LrGGn4U6Y2NfUM0esIcbs=,tag:xOqtfolHLhcaIBE2Zdcobw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:NA8MIGBhLJSgnDIDOTp4OMw=,iv:+yXlTz6uT+nzLa+TPWNGGOnqXNFisTXcDD42byU5hRE=,tag:hOcDueXMv1/pRunBEyYfoQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:idtb+ln7j5X91LkX2M4TCyNr3/gA8UCoPZGrCuKkeT8=,iv:K3siamB/1kRjjdpCeB6VSJ08HWaNCu/MFa/QEAxTzd8=,tag:Bs8R5VL/23v6/KUnUUe87g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:E/u33jr8l6sLQw1AqhhpHAxKARxYuF5SqYeDf8omrwnRzfk0MOpnJA==,iv:1WU/32FJfKKfTyd0LmRCjKFrGKqR9ltUFCEF6iijXuA=,tag:7ubA94221CoOwAr41LirtA==,type:str]
-#ENC[AES256_GCM,data:ZW+QUx630A/6KU4EoNYTQFatw/0DpijiQVBl5EKS4m0QAWGfV/EjrdlXXKieFuZbAuZr4Y1iJFlvvHbuFritmQ==,iv:A7KZwUSMI7xDv2CmmfzCWz/g+yhv4ksBXsCFzE7VCJ4=,tag:TU4T5a9ziaP0q/uOIG1mLA==,type:comment]
-#ENC[AES256_GCM,data:Y7EOsDnu9vs5lfSUOAM2l6BwQCq1yO9gqBHPKG+vzTyRxgyPsgIuQSuPgUeyh9xeRcn3F7bEhxs=,iv:9dXakQ0+YN2I7C0J81vktkuKeWRoIHiAyc0Aii1DXu8=,tag:BaVpYdynS/gSGOQhkx9csg==,type:comment]
-#ENC[AES256_GCM,data:y5RNFkssvIhLwPAG9WxuWZLpF+q7WvLaqQ==,iv:UuzS+Sv3X/BXwz0RRkDcj7V+JzHvkcCn0M5rYTp6uU4=,tag:LR7XAIdQLkU5ILdEc1I92Q==,type:comment]
-#ENC[AES256_GCM,data:Jjm0TES29NZFg9TS8DDoVzyKYzq5ZI7yAY7dqg7F5LkZxjyoYb1ND1fKJ5Kr/X6DX1uXnWTWfg5VFz6gk4WfrDTwS7aaveHtQ4FqcRA=,iv:aTOij4/MAK4kFhz+gLAGraF1ShCh1oDlNrGr2qezLSU=,tag:lWh3yNP2MWff5IEmrFWOUA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:uhOqykAjBbd6or5kyV5SGK2tDfNR1ZyGzXv6R01m0OFekcbC36yqptfX4WxdV5JQ,iv:vMehsTNeNgHAxv90sKH4j9K/qunPXpTdtF8AWcWFnJk=,tag:Z0D+VhimXTWsjlksMR5jvA==,type:str]
-#ENC[AES256_GCM,data:PDcOA3mSPT3ZABODLRip2E6BY3ceFQdvFsYBWl7pU2SWTsQroPJkargBSZ47UbMlFYWgEF6IUdHzTWFHq2ihywrRHQogbFA=,iv:VhAXgGT6YGTS/e3HRaedz+1eK508J8O9e9YF6gYmQ5k=,tag:/2CbxTetI9e0UXx7RkUbfw==,type:comment]
-#ENC[AES256_GCM,data:R9MYNEVJ1f3GvP3UCu/63uaN+ThkTkOX2CpjaOONsQkMamt0B8Dc8uypuAUZdI1/RVT9QxW0,iv:WdyH26LvTJiE5UTWGA8zAmHTbCTX9/G9+4jKwbevS6E=,tag:hvtL+erMu+58fEIqOfqYng==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:846c1Kdsaw==,iv:0ru8iPExJbazJ4cZ6L1r1+sA1HM+qe8NQ9yNCDaFrQs=,tag:c+SXD33jI6z6TeGF/kl31w==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:muKw9/cSog39E4mDia/juGZW/OI=,iv:7tthOyUS1cKqHMAhtAWcyXnpuM1w03iONeRGUVEZPx8=,tag:i5ZyNiwB/GrN4NG6zxTZSA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:3ruA1BygX+tGWoQ=,iv:K+803GQGk20JJTKwSFnJ1Chy/bhIzMhNbxZC7dLjT74=,tag:QtNg5g9Lo9lpr0Qc6vM/fQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:o7aBj+/0RdQba7To7aYy,iv:r4YimewqoRCxsLtDcZ8s4CK4nbmdLDznhPV9MFm+BdE=,tag:RIsh/BZ+dWsXwRLQmC0ZIg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:3FA4RzFMeQo7go9Pu0oK/B+k2+ErokA6MQ==,iv:u8RHwIt9RbBUqabrp4uXNk7WzITjWvaMi/DUnGn5PI0=,tag:1Iog4EZRGE2UvPKWjrODsA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:DcnTKIq3W7P4g5wMCNhyj9R4HcSPislijbPM5lASaQ==,iv:QE8fgqWqYeKs+FXgAb94xXHvNfXVUKLorrkwUOJpg+w=,tag:NFeJdz1kYOT8vHXxgC1KsQ==,type:str]
-#ENC[AES256_GCM,data:+rRk4qhowuA/wgeXqNmVZjGVw5x48uEsDXZlyzJlz6ALe4HXZ48=,iv:G7Ej/njwlBOtCBO6rGX/lU8KAkWpS3PcYrfgBecg46s=,tag:W2bPj1r9LQoHXF7d9oxLaA==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:CksA3IIhmBVfup2HKp0pHIvzh6I=,iv:dz1ITomlF2xdvmNpuvIfJxCIttxhNHXB5SfhVe8eFlk=,tag:gQmkSzTWyvxqTmHCeDJ/pg==,type:str]
-#ENC[AES256_GCM,data:ckYbXaLbuvimzFGyer8=,iv:P/M5UXMDRri5HInhbqShkhUYk0CwuB4+mIisq5ZrJvw=,tag:zNfMOZVVsY6AVJLB5iayyA==,type:comment]
-PODNET: ENC[AES256_GCM,data:KCB1tvPb2F1xgceDGg==,iv:PuVqQ3U29XXKzwn5zNIOya5Ta3eZvCHviL+rABRQr4E=,tag:igv+5nqEGS+Vz+LBTaFiPw==,type:str]
-SVCNET: ENC[AES256_GCM,data:HKglwkjUz8ox9yeyxA==,iv:r8+yEJqDLZ3pz2dNcg8sFufKzHxrxJK7t3Enz6pvC3g=,tag:Qn+8mAWx41fvJOAm0e7ZrQ==,type:str]
+#ENC[AES256_GCM,data:QAWbxvtCNyuE25sn2BQa3yN4P5VQie1vvTMVIyd8RNpTIhA/9icEn1twcaJe3Uji3vosuA4UX7pI8baDOv44Vbc=,iv:yQK3m158NyJIuj3LR1eTXu7n/qFR3K2CZi5zEj3hxVk=,tag:9/vEI/3gcDtxVZWgtvsCpw==,type:comment]
+#ENC[AES256_GCM,data:sBGYUlYdVm4mBugyJGfnThr7oOo6PLxwNxmUNkIfYDIYBTPYzBLbCNYb7pg=,iv:xb1Lt6nQy9mWj8Tnkb7injqFM7CqtR/q63dV5TJkE+U=,tag:FDeh0/tu8UWsWjYmJdtn0A==,type:comment]
+VIP: ENC[AES256_GCM,data:uJT12YHQ+uMknwFT+A==,iv:fwRemzOoT5goeGb8Z23gGzvWEQZjhBux1rpyomkmdQY=,tag:7LEnrVcWOf/3B77fHY51IA==,type:str]
+#ENC[AES256_GCM,data:7RDdDPTmK45ieh+Jd21xMgziBVdmmyiQ1aJk,iv:74t01dKK+Ka1WW98OELplaOvp5rTjXBgB614r3KTJXA=,tag:L6vCcFNoEz9CjkZ7eXzxgg==,type:comment]
+#ENC[AES256_GCM,data:aDGnGp9MMwuU8qai//9ceZ5kFRABhb5LZiUl6joUBmrhM2OKPhSNvYCnMGJ0nKF4opUNpwNVjMXtMFCcJE9aWl9g2ofi+sfcXTlqoYGpFnYPHdvDjCW1wFI=,iv:9yR+qOwv5+1jZ9jQlKRqlHvA4qLDnDVXaoOKto1r67s=,tag:lOYGV70rq4caUf+6lktCvw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:OnnPIvm5MulnLt9XvfM=,iv:XsBcLWzV3CzGRRlksKG12MvAi1o0kpKmR3whtKW5iN4=,tag:h4xa+5hMU3jjx9Sbe/v7kw==,type:str]
+#ENC[AES256_GCM,data:yHhaM3vMncrbhZC+8yu/z61HptLMFqlMYUxujtf52SOpdg==,iv:F4JTHylTGAZCoBwicFWqjbEw7h+lZPaOqRN0bEE2kro=,tag:n2Lzv1Zp0DEYBNX1HQGVMA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:K76M9QFeJ1Eq+MPQTw==,iv:dggqxCrO9FFQAOg7MJ/McKyM5X9ZA1L5NP/EJVGNSvo=,tag:McQkbu3I/yMY1EoY9pKsMg==,type:str]
+#ENC[AES256_GCM,data:CZNX9i4yZXmJuRsFcvlYmBT3zRlJH/ekGT+1bwHWsY4WcspT545UF5utXPiOrxQ=,iv:c74HhbiEUeHvXiiqDlFBKkVwxnK7HDoQczkyniHnKqY=,tag:xldQfgWnbW6nWstrqLKCJg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:zezDXB4oMKg+Wg6h7iUPT/QJi6jREq3LGOK1Dn//dQ==,iv:cTUQowFrcMnCozSf+tI7EoRYh+sseOptXt4V4OV5hsg=,tag:U5h0im4l9WMw7/mFPKDcCQ==,type:str]
+#ENC[AES256_GCM,data:yiwhZ3Y032bqw+c8LIFTqTY5em7wA6EJ+GUDkX/OMr+ENdIFUQ6+fIX61OyRM/FoY45lL8AUYGxcTTeWerrOfcpqdzcLmYz2LnC697+6v9IrLQ==,iv:7iJ0GmYFwQr5qMRLUw4BexrO8f5pbvf86dm8ZQF0NGk=,tag:nWfKbXJsw/3VPrr581oriA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:hoRgEW7xxTwl+AJVCYZf,iv:atpSd4k4y7wyjRnVL7CJaR87HWBc465GGW11aDUB+wI=,tag:k21sEsKQrHggLnqAO/rFAQ==,type:str]
+#ENC[AES256_GCM,data:MWEjYUc5GUaRkoUTNMBTBQ/XrEV8VsgS1pM3Q43Ks/Lo,iv:hRXMKGVbKS46uBCZjerdbwnN61eEJI/APZwnciqOYEA=,tag:ysCLpCt10d1i+083R7cEIA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:mODrFGFiAWdeQfuOQLhD,iv:TmaE1QNfbrMGhjfamjlW9oYKka+YyQusl/tGsQCF04g=,tag:xIUJMYKnUTMYpe0Wp0Kxgw==,type:str]
+#ENC[AES256_GCM,data:OduHf2bXfcMtAv/IDAwRi8JuTEJZ+FvQn14BgZ6Th7uydAMC6/5kGGxWplSAnQ1dXU6mLwbjawuHBceAQP2TbfYHMlZrcGwhKje6wFiU5Xs=,iv:I4EVLNJvnTNWORHmrqOW/i+iW4e6MfiuuBW8taBHuuY=,tag:BKvhBMt/WGgFJzx/KnT9zg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:K04IBPrAbkfK4omwPEKv,iv:z/fHKK9smO6bjiDXv7HYdsfKZ6tinjy9PcqSREzLoa0=,tag:eNeV8AQdcmfkwvpjiUgSGg==,type:str]
+#ENC[AES256_GCM,data:jumCw1we/rUszBIZcP3lbsdyfcANRLXUbBYsZFxdGn4PIJDuDJb5LKwt6QCzoBIRVTGt/4OUUXJAZkYTX35HE2URsDUmd3AORRH1yjjEoazIHtxjlQVd,iv:hX/jQbopDE0S4BzhwpWx2Uc4oopGN3IGKr9a+DNkn/s=,tag:Q8Rn+gVedeKjeBP9a9KDcw==,type:comment]
+#ENC[AES256_GCM,data:1tGi6t1J/W0oDjOmAVyWYT/BCLZCPvNYClkZES9sumyMqI8L6ZLCIi/OxxrOisX+FG381rRJI7zhHEJB4QfS6kF+x1aWlZ4XMrYeRuzvqdNxQJjVGt/4mEkehNoJ4Mllwz/Cxt0LmrHhSSPQXdb7K6Y8CvzT2Ie0AT6Zcw==,iv:MiVbcZREGknLpUSBN/ClR8pcrAo0dgf90uEyhptPOTY=,tag:atmVWpvt4YM/rE6rhJIkkQ==,type:comment]
+#ENC[AES256_GCM,data:nZJL82mcHCsMWuzI6RPs3+5FEGXwydQZ8yEdLo5M4HHkJYMILleLKgKzLa/QOOdrr6dUMwkO5XNWeCcgrcu0r4L/AzkmETbVUbYZvv3xnXM=,iv:S4e99HN+AKB04lSJz0YCcL0P5GhyXi0VF9DmZEL5zgc=,tag:TJAiJ3G7OKSTvFcM77V1yA==,type:comment]
+#ENC[AES256_GCM,data:bA2IXhMJMCJd7if0Vv2rx6I5z0Uhi9xzKbFk/unsIPnR4VMHHwiwCyfgiU/U8PaUo/JjCHiY,iv:9WQru4L65wAmFzteX1andIRpMyiAPdBBghsYMnF0LS0=,tag:+pG/CSNnYlfy3737LzOE9g==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:m1e/oPK3NGn5XD4z,iv:cfKn/VQTFsLVj4RUcn+a5ZJqgYVL2SAEm/vNzdqE4y4=,tag:JI9vEIewxnK+ai3meob72Q==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Q4xEwlEBxQ4FSmPIh3zPzyg=,iv:8TJSlO9Bx+iG+Rs8Z7XItKThz/zUjqL2wZFt+JLq+V0=,tag:apWtLMA5Xsp4YnYgaK3IhA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:nNuZAjSaUJacQ+bOXGUwgnka2IgJ+5TySXY2RR1rDnQ=,iv:/QNYflDumhxqXeA/2uP2PA3OzNiQuPUf1cgbIoZxJhA=,tag:ZWV8Du2lXjkUQ7046w3U3w==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:+b17ADEyz6UHHKfvD2BkxrxH1f97+G6oSxwnCnH1eIWSkZpH9D0irg==,iv:MoYnBJ7QTN4+qa1gGF4hjJh6TaZADvVJDzjooxEt++M=,tag:b4L8M1w3pxb5WbxF11a7Og==,type:str]
+#ENC[AES256_GCM,data:5EG11Qw8EcgohK8QHzJCHn74Q/SMLPvSjC8t4GmLmyd793JJV0dj+7NJev0PYLKQqWjYAb4OMMZk38Fyy209Mg==,iv:aZlmVtGiMmlJnCcw1ApxxNaDviayHqXNCRPl99BWbL8=,tag:z7nFyJVEf8CzDBrVf0kRIw==,type:comment]
+#ENC[AES256_GCM,data:oc7mICnDiYN+VKFfMsppIjPb8omfrfJextSh66kS7ypnV3lE7OPa8t2xG1Cw1Hk0xBldhAcNS6g=,iv:poc6NpSCWWZ+NuH3Cnmy+UR5IsivCOKadm0Y/jbpIRY=,tag:rYLZe+do4QU2CiP2JWXGjg==,type:comment]
+#ENC[AES256_GCM,data:myqkM05xYBhNdaGFwLYeCbfiYGSuCzhiZQ==,iv:JkKHKNP0Y/9Zai8uzu3E8yTJcTBPkQnLsLaA4x2DpWM=,tag:0Ted/lL5Z/hpxPhC01OAng==,type:comment]
+#ENC[AES256_GCM,data:T8TjKkjDQBzajh04x9klJpOFrAn5rFjE7jA2uOcK/KGbehrT2KITbilXShyj0xDzuKrwRe9TiyZrmZYg+cGowzW3neoFI3BGjRnshi0=,iv:mXufT/oSpQjFyORU66Qu+nLgUWzoO2UcRMXVfCIdVfc=,tag:oghqvhKZ2OHFjMyrzn8pQQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:TQk9HlWdNLZWbjQD6XRsceLjxRA3Uc3SF/5a6lvLQEC0DNzwG6u5E8acyNvRchwk,iv:/6TynJ1r3chNP1VM/s1joILAKoffsGlbVvvMQkpXIlY=,tag:gV3OhRB7I1s67X9qO6zoVA==,type:str]
+#ENC[AES256_GCM,data:D02HrrtEmH1Sp/FHG2qj5RBY/sXiU61MsN+fmPrTV94lEm+pKerJtWvFtMQonfU+lpIKSnQBLv4ZDj82U6HplXLsbmsxhuU=,iv:BUJ1jSyyiDxSaidE3qouNfrQe5LLsnsbpqukhVKE7XM=,tag:nCiZyuj329SSzp7mrs4seQ==,type:comment]
+#ENC[AES256_GCM,data:PdL+Lzrwt5n5D2eryi+MdOsDlGpE12lmo8HRbxUUAnnj3rbXFeEVcSKV3SEaw0TySJPdpVUd,iv:/v2s7x7MoENpQsJOqhBdXoErLrLAMy40+wnMkeTVKWE=,tag:PCWhYmgO/MWLDXLUW+bcYA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:O1sD/XMAFw==,iv:OLXHYCI/LIhgWBhG1l8SlMRZbNmYIFX1aPmCCDnjRf4=,tag:8Kg6sFEZxz4vclB1rG3UAA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:B7FdCBZFfGaoNfCXwqYcgpf9zvw=,iv:j3WngM4cgJeM+G+OJIPOtfH9fZYwVN61RZk3S0Dj9F0=,tag:Xvncb7wvCg9mEJN17yTYLA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:oqvNQ1/pXIqX1UA=,iv:OQY6CpGwUBCL7m4iv1ga4Klb49Wmpx8wGX1YAurBadg=,tag:qFg3uPRZaGzb4O330kVNpw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:V81rg/ovWXO9YUrYDMFc,iv:3EmkOyzAS2aU8NUTtEg6UOmITSQzu2hdNn3DckeZ3h0=,tag:kmvfrBmva2HCexIQgzKMzQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sCO02kgNp7Wy5OnweJ6xFLndvBq3kvkMuw==,iv:sh56WU2HGw+Wh77nTA4fGU9DwzttCoJfbSOY7WoT8v0=,tag:OjjUGsGLoqEUBS1cKdDBsQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:hxzeHHdYlmQLGtIBp0Ra5LJEsxbPbkeopTVvX1PSaA==,iv:kRkpDfLfMtGD1MVeVA9uz/mYs4eKXoM2NWqEvcLP7K4=,tag:vQrMITwPtTG5sUVzwQE0Bg==,type:str]
+#ENC[AES256_GCM,data:76FnjDvhOOfvW3Z8ya6uMNImia+4UjPX8okDo+sQvMTSC/dvYsg=,iv:HFmwPVztb62c5xKljMcp7eGS9xvqkSR1C0HC0gJ5yyg=,tag:2YQzoZlEkAz7QgRK+7GcEA==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:WRxdJPgzN3Nf2BqeSg/46inNrhc=,iv:c7H7hdlDptCKRXBMv1pJI/8xXF0kzriSZpVVhglkctQ=,tag:GynE3NZ+hVE5qFyjeU3Aew==,type:str]
+#ENC[AES256_GCM,data:XrOuJflysUh4GPomU08=,iv:p8LIIdKA3GStOR9X4ESNFDMmsrD3M9+ghwUEEOhw0lQ=,tag:Jr56vAJgPyHyWfn3OZle5Q==,type:comment]
+PODNET: ENC[AES256_GCM,data:DXf8fjKbNCV8QbUmgQ==,iv:6lA+ivw5Cl52fQEHyLz9/cmj8z8ZO4MSUc+01DDK60w=,tag:u51MdHw9FOhDHpgZhOS6Sw==,type:str]
+SVCNET: ENC[AES256_GCM,data:iH/ofA9M3rc8n+vYLQ==,iv:kETCQGe9yrJ5Brdx139JB6qBCg6NK8IrxvDw5ho1Ls0=,tag:GkFyh+sqiTJxSN+3iZkuIQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBndmdYUjhaVURYd3FXb2Q4
-            d1dZOHFmd0EzSHQ5VzdrenVCVDBkc2pCckZJCkJXbjRvd0N0QmlaT0YxZzcrQUFY
-            WGdyWHBGT1NpMXlvMnFNelRKK0F6RlkKLS0tIG1JdFJoMWRWWlJvYmdQeU5Db2U1
-            ZnU0REVyWlphV0F2aFIrQndKOFdCUmsKJl3tfw4x2ZBG2k1T3zRS/f20IAxl5xmZ
-            /KdInO/rjuP0iDo4/tD0iMWHJaigxa3IplIAK2Xw0CJ/BkhDKwydbg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRGtpeTM3S1ZtZmRxeXda
+            MWlTV0c5Wmc0a3ZjbU5zN0szUDJCOWdxQUdJCmtEbFRCWlhjQ2VBN0w3RUVzYmh1
+            U1FlOUI4M0pLcmRkQVN4MDNLZlNydm8KLS0tIDNrYTFtNnhzWS94V1ZvRUZiZjFy
+            RmhGMjAzeStKTHJWQk9OWXB0dnBOR0kKOEhnZQnIMwJztwVQvSW3nxeXYjRyntPW
+            eEo5VPF+h2G6GZ2DPc2srInqy9SvIsTVrgOA2XJTL1oEv7JMLi+WWg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T08:01:17Z"
-    mac: ENC[AES256_GCM,data:xs9zuZfcPgWbFwt6/J+Q+VBXp0/IpLWJAPKjFTzI7lsfJ87cTC6NtZGQYEVYEEK0di3dDwicPXNKUqX2JXVNPr3VL2XiA6Zz/YgqYdx3gZP+bGYxASCSqmJ8L2iXBHF8UebK+nxdDEKpY00P5ojJa9vpcnRehBXyzY2tUi7DgxQ=,iv:xzggWsQ3XdtmMEsjLrwq0mDE7fE+4fyZTIKfmjSW5ro=,tag:Dn7+VcX7OICNmV3ihDfjNg==,type:str]
+    lastmodified: "2025-01-20T08:04:46Z"
+    mac: ENC[AES256_GCM,data:hCdB4xmIHCHFs4X+KE8cPciGBwn4ElOoxUNoXa85EWU2ziy5jXAlf04k3LgySpO0aF8jDnRXu1I6YTmt2Ie1Rgw/LHmwlH1e8SogfVX0CHDgoGSekczPBo1UT2hicK6QtsAu0O1iz6JNXiQEIClKfAxGWsnqT9DW+n3kYJI4tFk=,iv:SewPc4wZ60o1xW7a1Yp63KpJ264kKUldn6jFG3MBen4=,tag:OmnGZna+TPBh0Lg4b5o8WQ==,type:str]
     pgp: []
     version: 3.9.2
