--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:DyTMSDIguXHiy/2jsjqmEx/0HptjUUzTF9AYMCMDeQ+kjNE69DLeyQQf9Bubuuw1Ml+N8L3GAJgNRkcwt1MPf+w=,iv:pkurI8vjmWEY2wbF4N9ZGKkNXJmxg1d43fvKje6L7aA=,tag:ClQKZT9BwreLBtireQjxTw==,type:comment]
-    #ENC[AES256_GCM,data:xUO6Caimsui3yxpqkJzFdog95yTMGXwYKD/wQ9bDRlWw44silAJFC7o83P8=,iv:QgmZ9KsWIad+EpfCZPcgBYVixx4KxxKe5y5VNlh3rpg=,tag:cx5YC5AxNH1uLY5n5ZkWWg==,type:comment]
-    VIP: ENC[AES256_GCM,data:cRpym7oR168iZ7/0eQ==,iv:2U8Q2C1L865VIiV1STHLSHWRSb/YlfbtfFBGPYpxvFQ=,tag:xAO4sNfiQTv49eZNvSS1UQ==,type:str]
-    #ENC[AES256_GCM,data:y4qaTdVTPTpkzLE6xQ+vDZwWee/6d2L+dp0A,iv:Ku7Y/HscXJm/k5zWTVwmYUpPRIDKQV6vZKig9Jwuomk=,tag:lhmYtaerKjKDx5ASrDMeEQ==,type:comment]
-    #ENC[AES256_GCM,data:qFP15DAA0IhuVEb08RFgT9jVQfCf45r8B//JGTNeMd9QRaH2z3YnL61lUkK/DADJIIsbaCzDz5f3RfbhQOrveYF/kqguEnjV5UdXIogr5tFFmzhQ0Hy3SRw=,iv:pBVkPq4Wuvkff9d5wKwmO0dwKwQh+i0ov3HnfFqI2gU=,tag:mNGUxeDHeEL4D6sE37ZDkg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:cAh68dtxavw6IDFCUXk=,iv:+C47JpTeIFTDGiCpemwE1AlMnlz/iXtOJHLp/OFEYYQ=,tag:krYamhOaW9vnwKhVnTE3DA==,type:str]
-    #ENC[AES256_GCM,data:INJ5IlxB8OhYZAqoEJwQ/U6lTX+V+OPv0GsT2F9j1tyRmw==,iv:mwirjE1Ydu0Ta33V2dnSWQy9sKuKk3rXKfAxO4E3O2A=,tag:/4oHLwBFGAsuu468ynNDYg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:7Y+seaoHiMUQ/NqKXg==,iv:H86vXln5ll77YDHe3cONWZMj6NFfdLwFT+H4mtNQmc8=,tag:F3/iKMqMibdKVcoUQm+ZPg==,type:str]
-    #ENC[AES256_GCM,data:/7oal2k16UNshWnoURjvLeI1pA3JQm2Nf05dZU3f0T6ocxlpOqRp6hwH9ehahD4=,iv:1unVoRRIhZxDXw37THTzRxd1QxH/dscODpAvPdSKv1s=,tag:pxlOhSGC8e0yJdDPNJvvvA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:sD28uUq8g+1KQ+hYWMNyiej57IYw8nEGARysUynJUQ==,iv:YjVHUQQTI0giyHWWAJipc9zkXJzyZEsa5rChtQNV2yc=,tag:6cT9DshSMkEszCAXRl3Z4w==,type:str]
-    #ENC[AES256_GCM,data:Nj1p+4UU9/M26rpBP4d4TcNIVTjGqka0pWMRILrvumKHTiZ2rpmWLa41XlOIhF4U83LbD2gWh0blk78noviREFClct/f7PiTmtRQRIwmQHUMIQ==,iv:CAIJ2+DzuhdA6o0EHjl80sQ12Cohp4xsvvO/LJ0HV2c=,tag:GWa2NlmULmgDBv8iPi0+3g==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:zAd1rSHPf/6krr8CtkAR,iv:oQ+3ln1W4LU+uefBxPf15cpBQ15sSvc9DdeL4gTf/kM=,tag:khXpSzXbRdoelV93EYBZSQ==,type:str]
-    #ENC[AES256_GCM,data:Av4N0iym8tki0LtdFJlssU7QMInn30QOzo/jW1LJ0UA5,iv:C2684OBKSXxexxvrvJjQDgD7bUheled36zn0fxTItYc=,tag:cCIiV75KPHfOR3qbGyVLbw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:KmE3aUa6zd+T7cQo5z7E,iv:5lnz0iJ1LMjdlfurpL02BN9ULHmM4be/xBO01TmLiQg=,tag:co58S5+kFVTARwpiCecx8w==,type:str]
-    #ENC[AES256_GCM,data:sIC9WTJg0R09QRzOGHPdmGX2oBWmzPkq2NEUx5Z8bkYD10ceOC0U/Na8fuXFLeOyo7NzAP1rAdQajtc6OfiBh7y+76KcXQ412+pP45P8bwk=,iv:RJY2K8/W8WL2Qw5RtVutdPAVlY3RkbY3pGgBZZW7Ulg=,tag:3RMBFTykINPDHd/xnaWTSA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:8KNtmy4qYw4hjMoM55FG,iv:rUTlMAIa0YnCQ26kdgyyCKxzAr1KV4FQ1ga/2uQK5QE=,tag:g0n+kmF0RRy78yn4to8TJg==,type:str]
-    #ENC[AES256_GCM,data:ElQu6S3PwYcDvpUop0iGXzrzA+6IPU4JQzrqsx9lnB0hxKFpBTeBT2H5d2Dv0kq4g6HxZaHQq2YO2AhHyoJSP+6C5sPFVuIx4lWa3NeSX1pzz5CNuG2F,iv:B7vXXn5ojH7Jaa7GOsQc7vMfhQCYlQQXwMeMOzLqJ48=,tag:WT1uM4E8CbXmFThivrT8XA==,type:comment]
-    #ENC[AES256_GCM,data:IAIXO8icXic0FSGxRJLSePNlbNTouL7t3FUwhu5fQBfeOUmyH7SpuAeE+LZlZ2zKMkOA3YJXXKlxrQa2RCXGKfiaK5ZmtM8WI1f+LyxnQUaFUZUjSDpcQyD28buFIa1CRpL4kcabERntYf+Qud1uMiUgDbTiiLr2lMAwQw==,iv:5zLWVJRPXarVVJCymLpWraBVtR4p5GUi3s3I7YXUb6I=,tag:9X3KG5z1OaEv1Q/CwH1jjg==,type:comment]
-    #ENC[AES256_GCM,data:Ov1sMl4xqEcfLVmOJ4yKaxEsQmMJ+XUDRmuts9tBvilUg06EQf99qQlPNcI1nr2QErVU5C7BAptfowu7da9OeaxAhMY+sXcjy2ti9Cgo2YY=,iv:1ilNkNsNghqGkjS5zBYJSJ243lJtaMmxdSdjPRsXTec=,tag:Drr0Le37Xm5vq3dPp/KFRg==,type:comment]
-    #ENC[AES256_GCM,data:u3DLgsbUyvfyjErGHalTobC3AL98R3Qbh2tK80UqjflHdDHy+R15W1PzxirXojVHGEoeHD74,iv:t5j3ZGdlJf3+l3aLNg40AX3BMjFA4nfza5+hBb4K2v0=,tag:n1FIIG9t+SvqeuOTDOqqlg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:mVKRr64+F6sO6pep,iv:9D+4DTKOggJRRLEhMWWnlil8dmixCYKrhO+2i5lGG5g=,tag:ZhGl44v9sND/LIEUHvvIGA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:VrFu0nW5tkliBKGDMuX3LLU=,iv:6DLG0cE9Xk55m7QiF94jF59xh91dqdyZCinPHT30Sb4=,tag:m6WsRQ6ySLuCqhUr489npQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:6uVj8lyMUAgJqFCc5qRwY1S6eNTteqs293wSfEWTiAQ=,iv:nhtXeK/TZ5QLsSPMDa/8/cFnukp/lqu1Hm3HrABPUXY=,tag:b/IXkiSNQaNm3TQGax22Xw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:js+giw9mvsQlcNvlXdCWUibyrC0243LqhwXlC3/SRCa6iXz2vUGneg==,iv:bnOiERNawiZFe9/GC2xQI37+4P5PNffS6jub8pbPNFI=,tag:8s/4DIWMzr9b555/IANzyg==,type:str]
-    #ENC[AES256_GCM,data:3Zf0JcSdpM5+B2FO6Ph/a4v4+1vPdiXL/BlO0yRaNkPi0Vg1bwpk1jLW5a6cMi0xvcS4j6jChdgQyD5vtexWog==,iv:L3EZmXTtY+ldn4JoCTp7vtNMdf8GpvHfeeBfD+nehJo=,tag:GQ/NpdVmCYSvPyQ8YsOcpA==,type:comment]
-    #ENC[AES256_GCM,data:2yMVei+bB4hFx+pvLu5M0PyhiwaQaqQ+T+0cHyfldnqb5Mb5b/tswfl7aH7mMffSFDkn7Y1VqpM=,iv:yJEGiCE0G+0fAYRN6N3EahINGDiBg1oaBVYgyT42lvc=,tag:ckdYG300Up+lBXjsA6HPBg==,type:comment]
-    #ENC[AES256_GCM,data:KwibGhYNVMrrqIeMbo2t840uFQPatwVkQw==,iv:wOvKOBGB+SiEDCmTaVjCy7uApufExkEaWHHAfZeyvS8=,tag:5P2mMSIsUwaLDm3OwpYkQQ==,type:comment]
-    #ENC[AES256_GCM,data:huu0bqXC1GY8WMhsMjeXnI457+BJ/m7GwEfHHG+6dml002tHLAGlXum+wfDY9TehVXI7JvcNGfywpB7ayBqrMcBws7pvW9lRFR5n5oM=,iv:09oS4kl7ucO3Wjj0NUFMweaJ0n0o+kALIseGOxa5Aus=,tag:1SaE3q5qWMtv4CJVt37M1w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:H6zdBiLlHpqImyjEoG0pW/XO9Uk3JqO+XrIjyzTtqmGv83AvpR4UDQvv64luqBTP,iv:C/jr+DWwVPq4tF4rC4xN5RI4kmVnCrXH7rnEDUBkNoU=,tag:wUyyCas5LBBR8GJs5/rtvQ==,type:str]
-    #ENC[AES256_GCM,data:zUnLcS2BbRMcfbWXJZReeW6YTfF8B/qXHwuQ1DBwhqr616qGKyoAlsj9QFLv3vrWaUcAjoji4CwBM9lTJaw3sj6JGXUUYuk=,iv:M5953D9N1YQK1dBgZwyxhG0CQ/ZQoVsXu+Pjx8yKUbI=,tag:lgt9DJ9MTFhAFz0wAOuaKw==,type:comment]
-    #ENC[AES256_GCM,data:mXcpPC5pECSmnLeVZe+aTmCW1wmu/M2GFGUMpXhV4JF1FiY6W8u8WeOEWpn041osQHOr8/rr,iv:ZsNuVT6ExzZsD5+2iW8znOTLnyJ9c/Mbz61nu9FvYeA=,tag:szKUvosqXan8OAnE6NnPGg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:FN4DBV3TTw==,iv:KO9WGsc6pHTQR1kSEwd/OBCmatEp3y9fppgURbQnVJg=,tag:wbA6FStfhZv6hwQR/OmNQw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:K1BVUqwd9joOkZYDIAxKApn2yA8=,iv:2vzkKvbFcNX5LVhLzadhmmojUqe081dWzQvjYfuOa/Q=,tag:M9TGneKluzxYs9oTXxI8Zw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:EwKDHxweuUI71Hw=,iv:hSw/kJUynhT6EOoNHS/RbsbwFdIDfHuAeEAd8fhhlb8=,tag:WHWysmYmuqM20EcRY/DuDA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:ZveMbeJ+lx56FIVaC7A+,iv:AUeEpNH7ZIJIFt5qYUxhhpSAkr/TyRe3vIlXTAxznhQ=,tag:DP/+LKGEbbKUi+1dkiOAZg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:eFuf7QTECmond5oEESOs4okeunPrTTkGqg==,iv:FHOtJqR3szBqhKmgpdHa5nZFUZRLNZYx+mIu6zF6vjU=,tag:n62n7Zb+O6MWBFxg8Us0rQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:3OxS6JvBOLu51XEho1iGjQOyn0OgNvBtH2o6FyLOSg==,iv:fSEktJgVrZDmp7peXqzdgN9kvQ9OACvJrM5MM4n5rDY=,tag:Db8kTBdCpOKdyNTjrXv4dw==,type:str]
-    #ENC[AES256_GCM,data:PDFkzNgOyIugDVGzaIuKQnSOZiMUzoOe55puDeYEbUgdWxipyV4=,iv:mN7W7F0sLM+VthIua0rsQKkKennNc97byVuAUyOf6i4=,tag:pnFPK0DZ4LHMaHYfREtI8Q==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:njwQ249fPPd7gVqEIQr05INEUw8=,iv:KeUEDbRcAnQcwZ6u7NH6KIuBp2oLLUavZrB/ODZ2GDg=,tag:B8bCil9WP4S5OMiZWVUe/Q==,type:str]
-    #ENC[AES256_GCM,data:qQ5uQCjpvD49FZPFli8=,iv:Ki223OO5rmHLfznaiR3VBLYm05EMULmnGlAxvzbhPt8=,tag:RZle/+3AnlCHfElEhPUMHQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:hBEOkViUSfcfhQ+76Q==,iv:zICofhVjSYjaTWqLlbC+hmOfICxo2cPBpnQfG69caPI=,tag:MhzagldSxJEuj2/EXKDzOA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:4KK57lapEx7IpRen7A==,iv:eWBlxnYtth8SJzs7sBtdnB7vjWxusBOORcM8WvxPwLY=,tag:z8Kgd/9WQoL/6DTC9CwNRQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:JvNdSw==,iv:voIW0ft4UhADpMwnpmpwd6lMgH/rVLN4YRUJvrhVbrE=,tag:3n2YG4+dyh8HGZemu3CJcg==,type:str]
+    #ENC[AES256_GCM,data:vC7YYGpG6lsZ0kk8k6myR4LKPszFqKr5ocJrVLN68QHgzT425UI+K2mM9IMKvdHbbzVGNQMeNILUgQAvapVo/dw=,iv:zIR2E60LMmhTKgFHKro+WPj6oxzksPoZFF3nB4YQHEo=,tag:u5GlyorNvVnrnhVM6NI3fA==,type:comment]
+    #ENC[AES256_GCM,data:Ph/8h9XcnRTa0+zNe83TTd7AMU5WCz8GkaxpwL1R7v8DvUMHwRNTtY2D11I=,iv:pOchpKtfSoRF8Bc1aFAExBf4RVzBumqvzZl7oSHQHFI=,tag:68CDBqhrEN2UlYJK01b19A==,type:comment]
+    VIP: ENC[AES256_GCM,data:8dEfYwrLM9XajHUCEA==,iv:oelrw3TPQVp5HRE3xcvaZXrcBTnz6qiNSQHuzBcCmA4=,tag:rHbb5INIm056RdIQHvS6Lw==,type:str]
+    #ENC[AES256_GCM,data:Za5FkJsj7vU78KJE8Xuzt7PYpljk7ixnVAXK,iv:UjmnNG1TKXh1HnKTVNGzlbz9ulMGX1LyDujQ4hwB5J0=,tag:BBoFKboqVKZh/igGT4+FXg==,type:comment]
+    #ENC[AES256_GCM,data:ov46vObID0QDsm+PcboP7RrY6arXwtkGvCg48Ly0tiszoXFRif7BZEW9kWeTgWhR0feRzPzvIOPQYyT7uPgvOCJilSFfN4swsIw0HxMDswkEWip49/u/YjA=,iv:mp3XYIsyzUeYgzjSWzs3aOiRDlqJEPjCeW/7E8FAcCo=,tag:ruGmDJXWPtkLg45gLtn9bA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:F8SfTCZCWlxIgB5M1PE=,iv:7ItGwEDR9IAniOUGf6EYR18Bncx0zy5kzYlYsPyTlUQ=,tag:QUa6U9vv2LZY4XpQd4nrSg==,type:str]
+    #ENC[AES256_GCM,data:VNEHQGP8crJOtKcM5sgjRE2yPARGpMQ5CufjnbArQv5rxg==,iv:nnPoWLzYc2RQkUd3VJFYRQc92ih7Ioa8WRXU8vtFxV8=,tag:Zm4USTkPzFRie2fvn9Lnbw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:lsju3wt4/4Rmct9DeA==,iv:n/chs6tf3oYbQGAa6eO2y6pSTujCFFOaQptdL62h7eU=,tag:OeaC78msDouygbBNyZiH5g==,type:str]
+    #ENC[AES256_GCM,data:e7gEtGHdD6qaa3fJsLvmKPpFbu2/ogvNw2eOPeNvlzedVD7zIVDtDIJRvZ2622Q=,iv:z/t4oWRk3jyVNOxKK3D91EDrFwfIL0Djg5o5iqZmBEo=,tag:iDhGd2gOgBB8jbxKj0dTQQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:QU1sWeE4wGSWOXwyqfIRzmcfL131hxehbJV7pGfr3A==,iv:TSY0ktMV3OVVPghOzrfwmxFVFDj7coE0Vla6jpYlfZc=,tag:6xW3A+QKeIHACweQIEGerw==,type:str]
+    #ENC[AES256_GCM,data:AaSLHS6Oke5JY1HzlEhhoedh53UuaR9idxZJqc16/cG7wozjo5VZV1PVZRbycygG0pjH08AzirP/Xp8VD0Fl+ZRt5Lbg8rAUlTpcrqF+dWlwlw==,iv:GAsUuUWAvRaxYuQLTEWKDW5KqAzLfUz0T30VrSjq7YM=,tag:0SHHfnMPqDhJtwQ1RgMvTw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:8hWSVNBtifie1pRFBGVl,iv:fBPFd9smUWzq6GVvVCd5SWncgkKpTFbhMJdqLJmkmSk=,tag:VAenX3W7231M06yw656Juw==,type:str]
+    #ENC[AES256_GCM,data:x0S6mj3wfr/h/fFFGu7RB7qtJgyI8M3Wq6of0nGAnI4A,iv:rH9SJXyEZPBI1Ay5rjjNRQZj4ssgiV2IEjwPIQAqpZA=,tag:JR50EcXReZB0V91U55lzMw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:7QPo+IEZwrVUJA9YdnSO,iv:3WMtmlgoMPNIas/kCdslVI4OAkF/KKex0D1tTmdan7k=,tag:5rqDUl7iN48eCg1x3cux3A==,type:str]
+    #ENC[AES256_GCM,data:YZp9/jyan9ZqEqUzhnjMNXXIjAZu6q5kV5qeIEHxdks0G06+1Tqx8ZCx6n/wHypxcUNrkmOuoa6c8jGq0HJVxHkclq7eyXaQkV3c+Q4gqV4=,iv:O8ehqA1JwspOmeaDlmeXiu6pnIhucqfpxxrJsjMMAEM=,tag:gBM8Vqaa5dWdWjVlOZFs9w==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:19ytmXFId6wJYtGpNBys,iv:3rAVh/HmgxLPpxpReAK0cCRCcK4IoFtRWkq9L65JnEM=,tag:Ip74y7USTEJQ4arb8XSfYQ==,type:str]
+    #ENC[AES256_GCM,data:83rtWqcJqqDTJXxge+WZASaEgGDA7uX7J8YFcWJ0pXYS1m6S1/BPtwChKS0GGrwTBk0dvE/uGDLNYNojnWIvvuXTRw208T9aJtDqYg2boAjWZsS8qSXb,iv:QLVg8vxUX3HOT+oRH22qIIpQdCOARUpzOzcNOFz4sak=,tag:BpuYR8k27Y0REaH+KXTmLQ==,type:comment]
+    #ENC[AES256_GCM,data:o4e9UJIaOrKXNCmh59UXOWTRAho2cmK8gcgaE5kko6IYxNaYScK6A0UXZF3Vh0chgsgYOkzcnRxdhazhllezzaDmusAMoo4VflFbTXD3gm9ODFFwa4DgKVmqbA7up/irv1uMURytUTuh/m//vtKxeu0JSsUSTFqS8yy1Aw==,iv:8L4RLkymmDWpinjvQiR+4keRaLyzTFAwmvfdLtch3p0=,tag:wcUvhmqosJv6haWEeZAHdg==,type:comment]
+    #ENC[AES256_GCM,data:Dl2UngUNHjE8E0Paf5peBLHw5q956eYOKhAPRGccAAP2aR4CsnGfEzLIIcEtcD/WmvoAtmnESVJxkqRVTLx3go2tuwBfZTFIwq1PdWKS3Hs=,iv:KTjC8qannfuJNcp5lB60W7OorcGInLoytx5Q1qnaR6s=,tag:6ycPimaA9c/e1eExk6i6BA==,type:comment]
+    #ENC[AES256_GCM,data:at5ZV1d2Q0bMNIYVDkB9saJGmmkkvmoZNOTqs0zUC2IQKerjF3zOZtxDJiwN8QvVNTyl/izJ,iv:t1KkABMqM6UMwz8bGqFqrmSEAMrgYZLQtwfjfCA6Eic=,tag:qeNGDQLNDDUXBqEEa5rRQQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:P9lfouRfsqVuIvKB,iv:lUFGREEyDraKq5YzvfSLLQd6R+Dzb28vFzzsKgOttNU=,tag:Q26R9ysD3X65v6MkF4X6uA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:PHzeK80M6e41Gi57YhYUuDU=,iv:dIzClHSfK55x6wSHmzih/wtWDPhnUYMkTOCwtmrPOSQ=,tag:15Emx7c1YZwc5sliixtoPg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:FDhDWyfrhAGEmTceREDdK4QSDRPXYyhUIxsygNsdPcI=,iv:C8w4jvLHxPJr871TcT96AioS7JH7Y2lFql1s4fbobbY=,tag:r6hwr6zy1DU9va8EjkfTcA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:49Ml+gjmXYjcLd/aXkDVSah9FdCX8JFDZldXFLxEgcT4fwZRBmJV5Q==,iv:jo2geI4bFexuWgYFXATfkeV6N+GZ/J0ggfzMqPJUsM0=,tag:1E1sKyohFB7yTm1e7MP+pg==,type:str]
+    #ENC[AES256_GCM,data:0JtaJ2rQeWtQjMd0zvcosxhimFKTnaIPYf5OM/lBKdQ6LS4pb5tnBksbG2iAfvihNfjNiDWmiPYZfiF+OGJJYQ==,iv:QBfv19L9Eli9luD76noySE3RfTUWY1evaL7KDQ6gV6w=,tag:cQ7xW84rwrrSCy92oqmgkw==,type:comment]
+    #ENC[AES256_GCM,data:Tz725A9FVg3/76sM2gTFgHLePWAPgr+oW/wDs00uec1jQ8Attrf2xDXObAOy8Y4+ocPewikNkZY=,iv:QyTJ2gZU0SO+1yNCa3Ej9gQ54+whoXqkNrg84trBePw=,tag:DLruQsmBTH3MO5nI3gpa0Q==,type:comment]
+    #ENC[AES256_GCM,data:Ut6xGerVkuUwvKFe42SKpTxRz1/ybpMUPw==,iv:GyA18jxCkhd33yeVl5gISLiQ+XSNHZRD//2guVAI5dE=,tag:9+bRexsQMw2R4O6OEIb6+A==,type:comment]
+    #ENC[AES256_GCM,data:/QTcCJjyei+rYh9qbdEp4Q3I63/ZT0ntdRI2OZrBYCryTrjvgTd0VUfOkg6qykV6Sb5Y/vGOgHzoN+fHqzTST10LYjHRYxhSSHT+nJA=,iv:937LwLm0P5Ng00u5otZUTOEQ55q3JWp6TwLlqcsBYRw=,tag:R0/bE6/HnC37Pc6hpfJ3Hw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:bMh9+CJe0st4RLyaCPVIrovzVFJVAL+dnMqxZx06tUVv4vluC126B8o09SwFRo5S,iv:HVdCE99pLvyqS1U4TBRT/lbo7kChH/jb93onKaAxALk=,tag:0vepDs2SsfQGlWzkFAZk9w==,type:str]
+    #ENC[AES256_GCM,data:BHeDakZ6qoKMoQt3xcPcKRW1sS2NDSZMnICx/D1BjGZBqGhJaEOsPDe6Zy6xc+2HVEioFfuySCYEHwuYCfzEl94mOVZtQZM=,iv:ANGiXNk3wEawBHEyQhKqmQeVm9BdGOJqo/PxdNTTLBE=,tag:54haKFDu5Uwa5FaMLuq7xQ==,type:comment]
+    #ENC[AES256_GCM,data:8wvcdprCTEnP1iT7rxHI2pVbDkLW9u6MfiFQg3RYmEINGRUhvKE8sQNLOHVC4cFJ+vmCY4kS,iv:DFAODHTQaMEqraRTqn3leql2hvvhvISHI5weEbN4XFc=,tag:WrD/TDcZEZnYjUYbFD9IZA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:ryHNEH/JQw==,iv:jXJ/t5WTZoMFEf1dEcF5ZRkiIuiP+M9FglWHWxtHvxc=,tag:h1hWv/gDPb1GNNJeYNUiRg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xvFbgFvs7OIeN37GgXaFgQl4n9g=,iv:BqC2fidWzbpZ5VU0JqaO7AmqmFlmfpm236KxOegjKsw=,tag:7rTfnxMPYBgJzutdnnRiGA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:Sbfdnags3CD4K6I=,iv:1Oh/DYM++U5l4torailRRFFc0tAF6JBKjcs+mEuXMr0=,tag:Rxk2uU/KsQqYvMcW9PJ/aA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:0f+0cXoFUxUJXkLJ1czO,iv:XJu5+Ntkq1AOFzroXmq4Doi5P0kcXILl4pVwC/zpljg=,tag:1eqSRS44DJGFFvZaO3hXnA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:VuN0ar4GO2p26fELhJPykljgd6Ja/OoQdw==,iv:GP0u65Fv4a/MkYJ+pZozq0ZEBPTBKSbLtQ7v0CU+xKo=,tag:9vJsCgUTMeyLt35bm2T6yg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:xwdJnd/vZQpSq2DmlWYW4vCcBesqfYXOZWHKtYuXww==,iv:3cQ7k37RE2kBrfHbLSv4SMrKuAcaTYkUhwBx9/oK8u0=,tag:T3cbLrw9XAEnWIWFekn5qg==,type:str]
+    #ENC[AES256_GCM,data:p3MX8Rl0suR1oBdRuOOitngVBcjtujuUBzgMKSb4TMnKW+bvJOI=,iv:CL3yBmYYin5zN2kTRkrfnjz/bl4/UrVcbUwYMnqPAN4=,tag:NBbkLM3R+s/wKO8F53K35A==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:yhzFcQEO5TmXUl3exjZrVPy4BKE=,iv:RUCqzbeaj7JL2wiP0AtrYPXF5Is897isIMTY4v6slTQ=,tag:Y3ZPA73C/XiK96j6Zw2wxg==,type:str]
+    #ENC[AES256_GCM,data:edLS8Ss1SCehc8B347s=,iv:y9rne4/BYyxjpS4yBa2TpDcY6axX7UsPjJJORB9rklU=,tag:pxPLtuIsFjPGrKjgvyiQqQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:PPp2xpErktTCFvSO2Q==,iv:gbaa75ArL/jDoWfIOM8vsKzIa5adh58MjLsJ6jugv3o=,tag:YfU78zyYsr057KqFWI+cmQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:aXu1dGsnfAWEx/EaHg==,iv:3OoUzWxT0J3hg26KSfMPBO1VGiSK66SzPJ+go1wEOhE=,tag:DhrcMW4usClalUVMaV4CzA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Sl56ow==,iv:7NQcMNN9FC3fHFv9Mad7rai6qugnmpE8DkPOlmKRyZI=,tag:+olZlySF1n/3hx0LWuhS1Q==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3QysyUkYwb2RwMTRNNTVq
-            TElTcEZsbUVKYW1oRmluaFdNa0w2Nk5FM1dZCktYZzRJcm03VmVNbW5SVktiV3FF
-            c0JIa0RRa1gyVWxPUFVlbUg2TkdJU1UKLS0tIHY2MDM3Z0VUYWgyYURjNnpPTU9h
-            ZVJwQnM2MnZWQW1JTEhsSXJpZ245eWsKn3k92qPJgTk/xUnAUI4OIaXflYkeEsYC
-            xDf76q00itN+QOg+u0evI7mwlybP0kfk7WfVHoyGplZBAqsMyDERTg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3VWE5VHJwWDRnRXoxS05H
+            U3ZYTDJqb2JvMitscVJKUDJIWjVlQjA1Y25VCnM0VTZseFJiZkJieFRXNzVvbGJU
+            REhxWEFub2R5aFlFOFNjbWVkQXZGZjgKLS0tIGl2ZitzY2F5NjA0WEwzWk9BbHpa
+            bzdocjQ4Y1NxenJ1RkxZendEUkUxYlkKhnDhPACHt6maD9OVFEniGORzCHLWvciL
+            /fEE46d2LYSwASMuXRpceE9W4e1Na34dNul9MWAlFjFxyaaL3oMElw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T08:01:17Z"
-    mac: ENC[AES256_GCM,data:9iLwLony7p35Xjip2VuzebGpHF8sTQUDIMXHhkZAlN1hVyyAC1fqn9dV4O9yJKeE5Cko02Esu3u1qan6YX39msf43drtoL/c4J8yFnjT9xzLvvedFm++XHM/FHcbymWKducHmeI0hqId6sgztr7MhrH8fb2pYql34tSdLvBHlHI=,iv:y2kznv7N5Xzj5U6qGiHloo/Xv1wTsyd5Wc3sA15pgpI=,tag:ztJonULkhdx/GIVLobcnFQ==,type:str]
+    lastmodified: "2025-01-20T08:04:46Z"
+    mac: ENC[AES256_GCM,data:+GvkFI8srG/sQ5nADpZ9zebLGd/PtC6U+kDZoIiMwbYb2JjFfZLzRUuJe1EEVXU6JxL+NO1I0wQW/FkA+IMHazKI9r40ke5lsklgKYTSvdlyEwOuK05R8AkSig2nPVbB1V1M8oW2f5om7PcXTLo/Hs/uejsstwswWqK2dYPzGUU=,iv:0mbp9B8h4XzTqVWe/wNeevDXcqdQgPhKR4oNDEOjusw=,tag:+pjKn0CKAep7Kdtfi2ESsA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
